See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 10.65.00

              pgmkernel: add -maxval.

              Recognize SIGPWR on systems that have it in messages
              about signal received.

              pstopnm: More rational default for landscape/portrait choice.
              In particular, if the image or page is square, image will always
              be in portrait (not rotated).

              pnmtops: Fix spurious blank line in asciihex encoding of the
              image raster.  Probably harmless.  Introduced in 10.56
              (September 2011).

              pnmtops: Fix crash with 12 bits per sample.  Introduced in 10.53
              (December 2010).  Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pnmtops: Fix bug: wrong output with -ascii85.  Introduced in
              10.63 (June 2013).

              pnmtops: Fix bug: wrong output with -rle.  Introduced in
              10.63 (June 2013).

              pnmtops: Fix bug: program hangs if it inherits lots of open
              files.  Introduced in 10.56 (September 2011).

              pnmtops: Fix bug: fails with message about waitpid() failing
              if invoked with SIGCHLD ignored.  Introduced in 10.56
              (September 2011).

              pbmtoepsi: fix handling of all-white image.  Always broken.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pbmtoepsi: fix excessively long raster line.  Always broken.
              Thanks Prophet of the Way <afu@wta.att.ne.jp>.

              pnmshear: fix incorrect determination of background color.
              Always broken.

              ppmpat: fix crash with -squig with aspect ratio < 1:25 or
              > 25:1. Thanks Prophet of the Way <afu@wta.att.ne.jp>.
              Always broken.

              pgmkernel: fix some pixels 1 less than they should be.
